More structure to html of google homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
 <!DOCTYPE html>
-<html>
-    <head>Google</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Google</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <a href="#">About</a>
+            <a href="#">Store</a>
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <a href="#">Sign In</a>
+        </header>
+        <main>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+            <div>
+                
+            </div>
+        </main>
+        <div>
+            United Kingdom
+        </div>
+        <div>
+            Carbon neutral since 2007
+        </div>
+        <div>
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
+    </body>
 </html>
