Edit to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <main>
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
             <div>
-                
+                <form action="https://www.google.com/">
+                <input type="text">
+                <button type="submit">Google Search</button>
+                <button type="submit">I'm Feeling Lucky</button>
+                </form>                
             </div>
         </main>
         <div>
