Edit to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <a href="#">About</a>
-            <a href="#">Store</a>
-            <a href="#">Gmail</a>
-            <a href="#">Images</a>
-            <a href="#">Sign In</a>
-        </header>
+        <div>
+            <ul>
+            <li><a class="" href="#">About</a></li>
+            <li><a href="#">Store</a></li>
+            <li><a href="#">Gmail</a></li>
+            <li><a href="#">Images</a></li>
+            <li><a id="Sign-In" href="#">Sign In</a></li>
+            </ul>
+        </div>
         <main>
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+            <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
             <div>
                 <form action="https://www.google.com/">
                 <input type="text">
