--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <div>
             <ul>
-            <li><a class="" href="#">About</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Store</a></li>
-            <li><a href="#">Gmail</a></li>
-            <li><a href="#">Images</a></li>
-            <li><a id="Sign-In" href="#">Sign In</a></li>
+            <li class="top-right-side"><a id="sign-in" href="#">Sign In</a></li>
+            <li class="top-right-side"><a href="#">Images</a></li>
+            <li class="top-right-side"><a href="#">Gmail</a></li>
             </ul>
         </div>
         <main>
