Edit to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -7,37 +7,37 @@
     </head>
     <body>
         <div>
-            <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Store</a></li>
-            <li class="top-right-side"><a id="sign-in" href="#">Sign In</a></li>
-            <li class="top-right-side"><a href="#">Images</a></li>
-            <li class="top-right-side"><a href="#">Gmail</a></li>
+            <ul class="top-bar">
+            <li class="top-left-side"><a class="top-item" href="#">About</a></li>
+            <li class="top-left-side"><a class="top-item" href="#">Store</a></li>
+            <li class="top-right-side"><a class="top-item" id="sign-in" href="#">Sign In</a></li>
+            <li class="top-right-side"><a class="top-item" href="#">Images</a></li>
+            <li class="top-right-side"><a class="top-item" href="#">Gmail</a></li>
             </ul>
         </div>
         <main>
             <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
             <div>
-                <form action="https://www.google.com/">
-                <input type="text">
-                <button type="submit">Google Search</button>
+                <div><form action="https://www.google.com/">
+                <input type="text"></div>
+                <div><button type="submit">Google Search</button>
                 <button type="submit">I'm Feeling Lucky</button>
-                </form>                
+                </form><div>                
             </div>
         </main>
-        <div>
+        <div class="united-kingdom">
             United Kingdom
         </div>
         <div>
-            Carbon neutral since 2007
-        </div>
-        <div>
-            <a href="#">Advertising</a>
-            <a href="#">Business</a>
-            <a href="#">How Search works</a>
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Settings</a>
+            <ul class="bottom-bar">
+            <li class="bottom-left-side"><a class="bottom-item" href="#">Advertising</a></li>
+            <li class="bottom-left-side"><a class="bottom-item" href="#">Business</a></li>
+            <li class="bottom-left-side"><a class="bottom-item" href="#">How Search works</a></li>
+            <li class="bottom-left-side"><a class="bottom-item" id="carbon" href="#">Carbon neutral since 2007</a></li>
+            <li class="bottom-right-side"><a class="bottom-item" href="#">Settings</a></li>
+            <li class="bottom-right-side"><a class="bottom-item" href="#">Terms</a></li>
+            <li class="bottom-right-side"><a class="bottom-item" href="#">Privacy</a></li>
+            </ul>
         </div>
     </body>
 </html>
