Edit to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             </ul>
         </div>
         <main>
-            <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-            <div>
-                <div><form action="https://www.google.com/">
+            <div class="google-top">
+                <div class="white-box"></div>
+            <div class="google-box"><img class="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo" height="92" width="272">
+            </div>
+            </div>
+            <div class="search-bar">
+                <div class="search-"><form action="https://www.google.com/">
                 <input type="text"></div>
                 <div><button type="submit">Google Search</button>
                 <button type="submit">I'm Feeling Lucky</button>
-                </form><div>                
+                </form></div>                
             </div>
         </main>
         <div class="united-kingdom">
