Edit to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
             </div>
             </div>
             <div class="search-bar">
-                <div class="search-"><form action="https://www.google.com/">
-                <input type="text"></div>
-                <div><button type="submit">Google Search</button>
-                <button type="submit">I'm Feeling Lucky</button>
-                </form></div>                
+                <div class="form-logo-search">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"></svg>
+                </div>
+                <input type="text">
             </div>
+                <form action="https://www.google.com/">
+                <div class="button-flexbox">
+                   <div><button type="submit">Google Search</button></div>
+                   <div><button type="submit">I'm Feeling Lucky</button></div>
+                </div>
+                </form>
         </main>
+        <div class="white-under-google">
+            <div class="bottom-white-box"></div>
+        </div>
         <div class="united-kingdom">
             United Kingdom
         </div>
